Fix/Finalize layout issues, project submission

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,42 +7,41 @@ body{
   color: hsl(201, 11%, 66%);
 }
 
-h1, h2, h3{
+h1, h2, h3 {
   margin: auto 45px 15px;
   color: hsl(210, 10%, 33%);
 }
 
-p{
+p {
   margin: auto 15px 25px;
   line-height: 1.6;
 }
 
-a{
+a {
   color: hsl(210, 10%, 33%);
 }
 
-section{
+section {
   text-align: center;
   margin-bottom: 200px;
 }
 
-.hero{
+.hero {
   background-image: url("images/bg-header-mobile.png");
   background-repeat: no-repeat;
   background-size: 100vw;
-
 }
 
-.hero-logo{
+.hero-logo {
   margin-top: 150px;
   margin-bottom: 50px;
 }
 
-.hero-title{
+.hero-title {
   margin: auto 45px 15px;
 }
 
-button{
+button {
   width: 20rem;
   border-radius: 50px;
   padding-top: 15px;
@@ -56,101 +55,281 @@ button{
   cursor: pointer;
 }
 
-.ios{
+.ios {
   background-color: hsl(171, 66%, 44%);
   box-shadow: 0 3px #259C87;
 }
 
-.ios:active{
+.ios:active {
   background-color: #5DCCBB;
 }
 
-.mac{
+.mac {
   background-color: hsl(233, 100%, 69%);
   box-shadow: 0 3px #5665C1;
 }
 
-.mac:active{
+.mac:active {
   background-color: #8896FF;
 }
 
-.clipboard{
+.clipboard {
   margin-bottom: 100px;
 }
 
-.main-images{
+.main-images {
   margin: 25px 5px 50px;
+  max-width: 1080px;
 }
 
-.computer{
+.computer {
   width: 90%;
   height: auto;
 }
 
-.snip{
+.snip {
   margin-bottom: 50px;
 }
 
-.mobile{
+.mobile {
   width: 100%;
   height: auto;
 }
 
-.workflow{
+.workflow {
   margin-bottom: 150px;
 }
 
-.workflow-text{
+.workflow-text {
   margin-bottom: 75px;
 }
 
-.workflow img{
+.workflow img {
   margin-bottom: 25px;
 }
 
-.blurb{
+.blurb {
+  margin: auto 10px 50px;
+}
+
+.companies img {
+  display: block;
+  margin: 0 auto 100px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #F5F6F8;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.footer-logo {
+  margin: 50px auto;
+  width: 3rem;
+}
+
+.link-container {
+  display: inline-grid;
+  grid-template-columns: auto;
+}
+
+.link-div {
+  margin-bottom: 25px;
+}
+
+.link-container div:last-child {
   margin-bottom: 50px;
 }
 
-.companies img{
-  display: block;
-  margin: 0  auto 100px;
-}
-
-footer{
-  background-color: #F5F6F8;
-  text-align: center;
-}
-
-.footer-logo{
-  width: 3rem;
-  margin: 50px auto 15px;
-}
-
-.footer-link{
-  display: block;
-  margin: 25px auto;
+.footer-link {
   text-decoration: none;
   color: hsl(210, 10%, 33%);
 }
 
-.icon{
+.icon {
   display: inline;
-  margin: 10px 20px;
+  margin: 10px 15px;
+  font-size: 1.5rem;
 }
 
-.footer-link:active{
+.footer-link:active {
   color: #5DCCBB;
-  /* Figure out how to change icon color on click */
-  /* fill: #5DCCBB; */
 }
 
 .attribution {
   margin-top: 15px;
+  margin-bottom: 0;
   font-size: 11px;
   text-align: center;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 640px) {
+  button {
+    width: 14rem;
+  }
+
+  .ios {
+    margin-right: 25px;
+  }
+
+  .blurb {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-text, .snippets-text, .clipboard-text, .downloads-text, .workflow-text {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  footer {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #F5F6F8;
+    text-align: left;
+  }
+
+  .footer-logo {
+    margin: auto 30px;
+    width: 3rem;
+  }
+
+  .link-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: 450px;
+  }
+
+  .link-div {
+    margin: 10px 0;
+    width: 150px;
+  }
+
+  .link-container div:last-child {
+    margin-bottom: auto;
+  }
+
+  .link-container :nth-child(1) {
+    order: 1;
+  }
+
+  .link-container :nth-child(2) {
+    order: 4;
+  }
+
+  .link-container :nth-child(3) {
+    order: 2;
+  }
+
+  .link-container :nth-child(4) {
+    order: 2;
+  }
+
+  .link-container :nth-child(5) {
+    order: 3;
+  }
+
+  .footer-link {
+    text-decoration: none;
+    color: hsl(210, 10%, 33%);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  section {
+    margin-bottom: 100px;
+  }
+
+  .hero {
+    background-image: url("images/bg-header-desktop.png");
+    background-repeat: no-repeat;
+    background-size: 100vw;
+  }
+
+  .hero-title {
+    font-size: 2.5rem;
+  }
+
+  .hero-text {
+    margin-left: 30%;
+    margin-right: 30%;
+  }
+
+  .computer {
+    position: relative;
+    left: -75px;
+    max-width: 1080px;
+    height: auto;
+  }
+
+  .snippets-flexbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .snippets-fb-child2 {
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .snippets-fb-child2 h3, .snippets-fb-child2 p {
+    margin-left: 0;
+  }
+
+  .fb-child2-div {
+    margin-right: 40%;
+    text-align: left;
+  }
+
+  .clipboard {
+    margin-bottom: 25px;
+  }
+
+  .workflow-flexbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .workflow-fc {
+    margin: auto;
+    max-width: 33.3%;
+  }
+
+  .companies {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    justify-content: space-around;
+  }
+
+  .link-container {
+    width: 575px;
+  }
+
+  .link-div {
+    margin: 10px 25px 10px 0;
+  }
 }
